--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
                             <li class="autor-item" >
                                 <a href="#" class="item-link lien autor "  data-filter="autor" id="aut"> AUTEUR</a>
                             </li>
-                            <li class="pro-item"><a href="#" class="item-link lien" data-filter="productor" id="prod">PRODUCTEUR</a>
+                            <li class="pro-item"><a href="#" class="item-link lien productor" data-filter="productor" id="prod">PRODUCTEUR</a>
                             </li>
-                            <li class="tec-item"><a href="#" class="item-link lien" data-filter="technicien" id="tec">TECHNICIEN</a>
+                            <li class="tec-item"><a href="#" class="item-link lien technicien" data-filter="technicien" id="tec">TECHNICIEN</a>
                             </li>
-                            <li class="beg-item"><a href="#" class="item-link lien" data-filter="beginner" id="beg">DEBUTANT</a>
+                            <li class="beg-item"><a href="#" class="item-link lien beginner" data-filter="beginner" id="beg">DEBUTANT</a>
                             </li>
-                            <li class="lib-item"><a href="#" class="item-link lien" data-filter="library" id="lib">LIBRAIRIE</a>
+                            <li class="lib-item"><a href="#" class="item-link lien libraryy" data-filter="library" id="lib">LIBRAIRIE</a>
                             </li>
-                            <li class="edi-item"><a href="#" class="item-link lien" data-filter="editor" id="edi">EDITEUR</a>
+                            <li class="edi-item"><a href="#" class="item-link lien editor" data-filter="editor" id="edi">EDITEUR</a>
                             </li>
                         </ul>
                     </div>
@@ -240,6 +240,12 @@
     
     <script src="scripts/getJson__Names.js"></script>
     <script src="scripts/getJson__Cibles.js"></script>
+    <script src="scripts/getJson__Productor.js"></script>
+    <script src="scripts/getJson__Technicien.js"></script>
+    <script src="scripts/getJson__Beginner.js"></script>
+    <script src="scripts/getJson__Library.js"></script>
+    <script src="scripts/getJson__Editor.js"></script>
+    <script src="scripts/getJson__Domains.js"></script>
     <!-- <script src="scripts/getJson_div1.js"></script> -->
     <script src="scripts/main.js"></script>
     <script src="scripts/filterJquery.js"></script>
